--- a/scss/home/_list.scss
+++ b/scss/home/_list.scss
@@ -3,4 +3,62 @@
         display: grid;
         grid-template-columns: repeat(5, 1fr);
     }
+    // background: red;
+    box-shadow: 0px 4px 15px color-mix(in srgb, var(--rich-black), transparent 50%);
+    border-radius: $spacing;
+    .list{
+        padding: $spacing;
+        
+        &:not(:last-child){
+            position: relative;
+            &::before{
+                content: '';
+                position: absolute;
+                height: 2px;
+                width: calc(100% - 18px);
+                bottom: 0;
+                left: 50%;
+                transform: translateX(-50%);
+                background: color-mix(in srgb, var(--rich-black), transparent 70%);
+            }
+        }
+    }
+    .col-names{
+        border-radius: $spacing $spacing 0 0;
+        padding: $spacing;
+        background: var(--blue);
+        p{
+            font-weight: 600;
+        }
+    }
+
+    //admis / non admis
+    .result{
+        --passed: color-mix(in srgb, var(--green), transparent 75%);
+        --passed-dot: color-mix(in srgb, var(--green), transparent 0%);
+
+        --sorry: color-mix(in srgb, var(--red), transparent 75%);
+        --sorry-dot: color-mix(in srgb, var(--red), transparent 0%);
+
+        p{
+            width: fit-content;
+            background: var(--passed);
+            padding: 2px 8px;
+            padding-left: 32px;
+            border-radius: 12px;
+            position: relative;
+            font-weight: 500;
+            &::before{
+                content: '';
+                position: absolute;
+                left: 8px;
+                top: 50%;
+                transform: translateY(-50%);
+                width: 12px;
+                aspect-ratio: 1/1;
+                border-radius: 50%;
+                background: var(--passed-dot);
+            }
+        }
+    }
 }
