✨ feat(insight x supabase works😁): need optimisation🤔

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -27,6 +27,7 @@ body {
 @import './shared/var';
 @import './shared/typo';
 @import './shared/lang';
+@import './shared/select';
 @import './components/navbar';
 @import './components/footer';
 @import './responsive';
