--- a/scss/home/_list.scss
+++ b/scss/home/_list.scss
@@ -1,64 +1,119 @@
-.table{
-    >div{
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-    }
-    // background: red;
+table{
     box-shadow: 0px 4px 15px color-mix(in srgb, var(--rich-black), transparent 50%);
+    padding: $spacing;
+    border-collapse: collapse;
+    max-width: 100vw;
     border-radius: $spacing;
-    .list{
-        padding: $spacing;
+    overflow: hidden;
+    margin: $spacing
+}
+
+th, td{
+    padding: $spacing;
+    text-align: left;
+}
+tr:nth-of-type(2n){
+    background: hsl(0 0% 0%/ 0.05);
+}
+thead{
+    background: var(--blue);
+}
+
+@media (max-width: $breakpoint-lg) {
+    table{
+        margin: $spacing;
+    }
+    th{
+        display: none;
+    }
+    td{
+        display: grid;
+        gap: $spacing-xs;
+        grid-template-columns: 12ch auto;
+        padding: 4px $spacing;
+        &:first-child{
+            padding-top: $spacing;
+        }
+        &:last-child{
+            padding-bottom: $spacing;
+        }
+        &::before{
+            content: attr(data-cell) ": ";
+            font-weight: 700;
+            text-transform: capitalize;
+        }
+    }
+}
+
+// style observation
+[data-cell=observation]{
+    p{
+        background: red;
+        width: fit-content;
+        background: var(--color);
+        padding: 2px 8px;
+        padding-left: 32px;
+        border-radius: 12px;
+        position: relative;
+        font-weight: 500;
         
-        &:not(:last-child){
-            position: relative;
-            &::before{
-                content: '';
-                position: absolute;
-                height: 2px;
-                width: calc(100% - 18px);
-                bottom: 0;
-                left: 50%;
-                transform: translateX(-50%);
-                background: color-mix(in srgb, var(--rich-black), transparent 70%);
-            }
+        &::before{
+            content: '';
+            position: absolute;
+            left: 8px;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 12px;
+            aspect-ratio: 1/1;
+            border-radius: 50%;
+            background: var(--color-dot);
         }
     }
-    .col-names{
-        border-radius: $spacing $spacing 0 0;
-        padding: $spacing;
-        background: var(--blue);
-        p{
-            font-weight: 600;
+}
+[data-result="admis" i]{
+    --color: color-mix(in srgb, var(--green), transparent 75%);
+    --color-dot: color-mix(in srgb, var(--green), transparent 0%);
+}
+[data-result="non admis" i]{
+    --color: color-mix(in srgb, var(--red), transparent 75%);
+    --color-dot: color-mix(in srgb, var(--red), transparent 0%);
+}
+
+//Style mention
+[data-cell=mention]{
+    p{
+        font-weight: 500;
+        position: relative;
+        width: fit-content;
+        &::before{
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100%;
+            height: 50%;
+            background: var(--underline);
+            z-index: -1;
         }
     }
+}
 
-    //admis / non admis
-    .result{
-        --passed: color-mix(in srgb, var(--green), transparent 75%);
-        --passed-dot: color-mix(in srgb, var(--green), transparent 0%);
+[data-mention="Très bien" i]{
+    --underline: hsla(106, 100%, 56%, 0.836);
+}
+[data-mention="bien" i]{
+    --underline: hsla(78, 100%, 56%, 0.74);
+}
+[data-mention="Assez bien" i]{
+    --underline: hsla(49, 100%, 54%, 0.588);
+}
+[data-mention="Passable" i]{
+    --underline: hsla(0, 0%, 66%, 0.527);
+}
 
-        --sorry: color-mix(in srgb, var(--red), transparent 75%);
-        --sorry-dot: color-mix(in srgb, var(--red), transparent 0%);
-
-        p{
-            width: fit-content;
-            background: var(--passed);
-            padding: 2px 8px;
-            padding-left: 32px;
-            border-radius: 12px;
-            position: relative;
-            font-weight: 500;
-            &::before{
-                content: '';
-                position: absolute;
-                left: 8px;
-                top: 50%;
-                transform: translateY(-50%);
-                width: 12px;
-                aspect-ratio: 1/1;
-                border-radius: 50%;
-                background: var(--passed-dot);
-            }
-        }
+@media (min-width: $breakpoint-lg) {
+    [data-cell=option]{
+        text-align: center;
     }
 }
