--- a/scss/shared/_typo.scss
+++ b/scss/shared/_typo.scss
@@ -77,7 +77,7 @@
             url('/fonts/poppins-v21-latin-900.svg#Poppins') format('svg'); /* Legacy iOS */
 }
 
-body, input, button {
+body, input, button, select {
     font-family: 'Poppins';
     font-weight: 400;
 }
