--- a/scss/home/_list.scss
+++ b/scss/home/_list.scss
@@ -5,7 +5,10 @@ table{
     max-width: 100vw;
     border-radius: $spacing;
     overflow: hidden;
-    margin: $spacing
+    margin: $spacing;
+}
+th{
+    font-weight: 500;
 }
 
 th, td{
@@ -44,11 +47,9 @@ thead{
         }
     }
 }
-
-// style observation
-[data-cell=observation]{
+table [data-cell=observation i]{
+    // background: red;
     p{
-        background: red;
         width: fit-content;
         background: var(--color);
         padding: 2px 8px;
@@ -70,50 +71,119 @@ thead{
         }
     }
 }
-[data-result="admis" i]{
-    --color: color-mix(in srgb, var(--green), transparent 75%);
-    --color-dot: color-mix(in srgb, var(--green), transparent 0%);
-}
-[data-result="non admis" i]{
-    --color: color-mix(in srgb, var(--red), transparent 75%);
-    --color-dot: color-mix(in srgb, var(--red), transparent 0%);
-}
-
-//Style mention
-[data-cell=mention]{
-    p{
-        font-weight: 500;
-        position: relative;
-        width: fit-content;
-        &::before{
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 100%;
-            height: 50%;
-            background: var(--underline);
-            z-index: -1;
+[data-result="non admis" i] + td>p{
+    opacity: 0;
+} 
+table *{
+    td[data-result="admis" i]{
+        --color: color-mix(in srgb, #32d800, transparent 75%);
+        --color-dot: color-mix(in srgb, #29af00, transparent 0%);
+    }
+    td[data-result="non admis" i]{
+        --color: color-mix(in srgb, var(--red), transparent 75%);
+        --color-dot: color-mix(in srgb, var(--red), transparent 0%);
+    }
+    //Style mention
+    td[data-cell=mention i]{
+        p{
+            font-weight: 500;
+            position: relative;
+            width: fit-content;
+            &::before{
+                content: '';
+                position: absolute;
+                bottom: 0;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 100%;
+                height: 50%;
+                background: var(--underline);
+                z-index: -1;
+            }
+        }
+    }
+    
+    td[data-mention="Très bien" i]{
+        --underline: hsla(106, 100%, 56%, 0.836);
+    }
+    td[data-mention="bien" i]{
+        --underline: hsla(78, 100%, 56%, 0.74);
+    }
+    td[data-mention="Assez bien" i]{
+        --underline: hsla(49, 100%, 54%, 0.588);
+    }
+    td[data-mention="Passable" i]{
+        --underline: hsla(0, 0%, 66%, 0.527);
+    }
+    
+    @media (min-width: $breakpoint-lg) {
+        td[data-cell=option]{
+            text-align: center;
         }
     }
 }
 
-[data-mention="Très bien" i]{
-    --underline: hsla(106, 100%, 56%, 0.836);
-}
-[data-mention="bien" i]{
-    --underline: hsla(78, 100%, 56%, 0.74);
-}
-[data-mention="Assez bien" i]{
-    --underline: hsla(49, 100%, 54%, 0.588);
-}
-[data-mention="Passable" i]{
-    --underline: hsla(0, 0%, 66%, 0.527);
+.search-cont{
+    display: flex;
+    gap: $spacing-xs;
+    justify-content: center;
+    select{
+        padding: $spacing-xs $spacing;
+        border-radius: $spacing-xs;
+        font-size: $font-size;
+        color: color-mix(in srgb, var(--rich-black), transparent 20%);
+        font-weight: 600;
+        background: var(--blue);
+        border: none;
+        cursor: pointer;
+    }
+    input{
+        padding: $spacing-xs $spacing;
+        border-radius: $spacing-xs;
+        font-size: $font-size;
+        width: 500px;
+        border: 2px solid color-mix(in srgb, var(--rich-black), transparent 65%);
+        transition: .25s border ease-in-out;
+        &:focus{
+            outline: none;
+            border: 2px solid color-mix(in srgb, var(--rich-black), transparent 50%);
+        }
+    }
+    @media (max-width: $breakpoint-md) {
+        input{
+            width: 100%;
+        }
+    }
+    @media (max-width: $breakpoint-sm) {
+        padding: $spacing;
+    }
 }
 
-@media (min-width: $breakpoint-lg) {
-    [data-cell=option]{
-        text-align: center;
+.missing{
+    text-align: center;
+}
+
+.tables{
+    display: grid;
+    place-content: center;
+    margin: $spacing 0 0;
+}
+
+.pagination{
+    display: flex;
+    gap: $spacing;
+    justify-content: center;
+    margin: $spacing 0 0;
+    button{
+        padding: 8px 16px;
+        background: var(--blue);
+        border-radius: 8px;
+        border: none;
+        font-size: $font-size;
+        font-weight: 500;
+        cursor: pointer;
+    }
+    h3{
+        opacity: .5;
     }
 }
