--- a/src/global.css
+++ b/src/global.css
@@ -114,7 +114,8 @@ body {
 
 body,
 input,
-button {
+button,
+select {
   font-family: "Poppins";
   font-weight: 400;
 }
@@ -164,95 +165,17 @@ small {
   /* 13.28px */
 }
 
-.custom-select {
-  position: relative;
-  color: #000;
-}
-
-.custom-select .select-button {
-  width: 100%;
-  font-size: 1.15rem;
-  background-color: #fff;
-  padding: 0.675em 1em;
-  border: 1px solid #caced1;
-  border-radius: 0.25rem;
+select {
+  font-weight: 900;
+  font-size: 1.5rem;
+  border: none;
+  padding-right: 0.6666666667em;
   cursor: pointer;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  background: none;
 }
 
-.custom-select .selected-value {
-  text-align: left;
-}
-
-.custom-select .arrow {
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-top: 6px solid #000;
-  transition: transform ease-in-out 0.3s;
-}
-
-.select-dropdown {
-  position: absolute;
-  list-style: none;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-  box-sizing: border-box;
-  background-color: #fff;
-  border: 1px solid #caced1;
-  border-radius: 4px;
-  padding: 10px;
-  margin-top: 10px;
-  max-height: 200px;
-  overflow-y: auto;
-  transition: 0.5s ease;
-}
-
-.select-dropdown:focus-within {
-  box-shadow: 0 10px 25px rgba(94, 108, 233, 0.6);
-}
-
-.select-dropdown li {
-  position: relative;
-  cursor: pointer;
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-}
-
-.select-dropdown li label {
-  width: 100%;
-  padding: 8px 10px;
-  cursor: pointer;
-}
-
-.select-dropdown::-webkit-scrollbar {
-  width: 7px;
-}
-
-.select-dropdown::-webkit-scrollbar-track {
-  background: #f1f1f1;
-  border-radius: 25px;
-}
-
-.select-dropdown::-webkit-scrollbar-thumb {
-  background: #ccc;
-  border-radius: 25px;
-}
-
-.select-dropdown li:hover,
-.select-dropdown input:checked ~ label {
-  background-color: #f2f2f2;
-}
-
-.select-dropdown input:focus ~ label {
-  background-color: #dfdfdf;
-}
-
-.select-dropdown input[type=radio] {
-  position: absolute;
-  left: 0;
-  opacity: 0;
+select:focus {
+  outline: none;
 }
 
 header {
@@ -325,7 +248,9 @@ footer {
 
 #insight {
   display: flex;
+  flex-wrap: wrap;
   gap: 1.75em;
+  margin-bottom: 1em;
   background: white;
   border-radius: 1em;
   padding: 1em;
@@ -426,6 +351,10 @@ table {
   margin: 1em;
 }
 
+th {
+  font-weight: 500;
+}
+
 th,
 td {
   padding: 1em;
@@ -440,8 +369,7 @@ thead {
   background: var(--blue);
 }
 
-[data-cell=observation] p {
-  background: red;
+table [data-cell=observation i] p {
   width: -moz-fit-content;
   width: fit-content;
   background: var(--color);
@@ -452,7 +380,7 @@ thead {
   font-weight: 500;
 }
 
-[data-cell=observation] p::before {
+table [data-cell=observation i] p::before {
   content: "";
   position: absolute;
   left: 8px;
@@ -464,24 +392,28 @@ thead {
   background: var(--color-dot);
 }
 
-[data-result=admis i] {
-  --color: color-mix(in srgb, var(--green), transparent 75%);
-  --color-dot: color-mix(in srgb, var(--green), transparent 0%);
+[data-result="non admis" i] + td > p {
+  opacity: 0;
 }
 
-[data-result="non admis" i] {
+table * td[data-result=admis i] {
+  --color: color-mix(in srgb, #32d800, transparent 75%);
+  --color-dot: color-mix(in srgb, #29af00, transparent 0%);
+}
+
+table * td[data-result="non admis" i] {
   --color: color-mix(in srgb, var(--red), transparent 75%);
   --color-dot: color-mix(in srgb, var(--red), transparent 0%);
 }
 
-[data-cell=mention] p {
+table * td[data-cell=mention i] p {
   font-weight: 500;
   position: relative;
   width: -moz-fit-content;
   width: fit-content;
 }
 
-[data-cell=mention] p::before {
+table * td[data-cell=mention i] p::before {
   content: "";
   position: absolute;
   bottom: 0;
@@ -493,20 +425,82 @@ thead {
   z-index: -1;
 }
 
-[data-mention="Très bien" i] {
+table * td[data-mention="Très bien" i] {
   --underline: hsla(106, 100%, 56%, 0.836);
 }
 
-[data-mention=bien i] {
+table * td[data-mention=bien i] {
   --underline: hsla(78, 100%, 56%, 0.74);
 }
 
-[data-mention="Assez bien" i] {
+table * td[data-mention="Assez bien" i] {
   --underline: hsla(49, 100%, 54%, 0.588);
 }
 
-[data-mention=Passable i] {
+table * td[data-mention=Passable i] {
   --underline: hsla(0, 0%, 66%, 0.527);
+}
+
+.search-cont {
+  display: flex;
+  gap: 0.6666666667em;
+  justify-content: center;
+}
+
+.search-cont select {
+  padding: 0.6666666667em 1em;
+  border-radius: 0.6666666667em;
+  font-size: 1rem;
+  color: color-mix(in srgb, var(--rich-black), transparent 20%);
+  font-weight: 600;
+  background: var(--blue);
+  border: none;
+  cursor: pointer;
+}
+
+.search-cont input {
+  padding: 0.6666666667em 1em;
+  border-radius: 0.6666666667em;
+  font-size: 1rem;
+  width: 500px;
+  border: 2px solid color-mix(in srgb, var(--rich-black), transparent 65%);
+  transition: 0.25s border ease-in-out;
+}
+
+.search-cont input:focus {
+  outline: none;
+  border: 2px solid color-mix(in srgb, var(--rich-black), transparent 50%);
+}
+
+.missing {
+  text-align: center;
+}
+
+.tables {
+  display: grid;
+  place-content: center;
+  margin: 1em 0 0;
+}
+
+.pagination {
+  display: flex;
+  gap: 1em;
+  justify-content: center;
+  margin: 1em 0 0;
+}
+
+.pagination button {
+  padding: 8px 16px;
+  background: var(--blue);
+  border-radius: 8px;
+  border: none;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.pagination h3 {
+  opacity: 0.5;
 }
 
 main {
@@ -515,7 +509,7 @@ main {
 }
 
 @media (min-width: 1024px) {
-  [data-cell=option] {
+  table * td[data-cell=option] {
     text-align: center;
   }
 }
@@ -581,6 +575,10 @@ main {
   #search input {
     width: 100%;
   }
+
+  .search-cont input {
+    width: 100%;
+  }
 }
 
 @media (max-width: 640px) {
@@ -591,11 +589,25 @@ main {
   #search .search {
     padding: 1em;
   }
+
+  .search-cont {
+    padding: 1em;
+  }
 }
 
 @media (max-width: 475px) {
   .container {
     width: 100%;
+  }
+
+  #insight {
+    margin: 1.75em;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
+  #insight select {
+    font-size: 1.3rem;
   }
 }
 /*# sourceMappingURL=global.css.map */
