--- a/src/global.css
+++ b/src/global.css
@@ -183,13 +183,16 @@ header {
   margin: 0 0 2em;
 }
 
-header a.men img {
+header a.men {
   height: 80px;
+  width: 80px;
+  background: url("/media/men.webp") center/cover no-repeat;
 }
 
-header a img {
+header a.mada {
   height: 100px;
-  width: auto;
+  width: 120px;
+  background: url("/media/mada.webp") center/cover no-repeat;
 }
 
 nav {
